@@ -471,14 +471,14 @@ maptomat_shallow(GEN T)
 GEN
 gtomap(GEN x)
 {
-  if (!x) return listcreate_typ(t_LIST_MAP);
+  if (!x) return mkmap();
   switch(typ(x))
   {
   case t_MAT:
     {
       long n, l = lg(x);
       GEN M, p;
-      if (l == 1 || lgcols(x)==1) return listcreate_typ(t_LIST_MAP);
+      if (l == 1 || lgcols(x)==1) return mkmap();
       if (l != 3) pari_err_TYPE("Map",x);
       p = gen_indexsort_uniq(gel(x,1),(void*)&cmp_universal, cmp_nodata);
       if (lg(p) != lgcols(x))
