@@ -5,7 +5,7 @@ Prototype: D0,L,
 Obsolete: 2007-08-10
 Help: listcreate({n}): this function is obsolete, use List().
 Description:
- (?gen):list        listcreate()
+ (?gen):list        mklist()
 Doc: This function is obsolete, use \kbd{List}.
 
  Creates an empty list. This routine used to have a mandatory argument,
