@@ -3039,8 +3039,6 @@ int     gsigne(GEN x);
 GEN     gtolist(GEN x);
 long    gtolong(GEN x);
 int     lexcmp(GEN x, GEN y);
-GEN     listcreate_typ(long t);
-GEN     listcreate(void);
 GEN     listinsert(GEN list, GEN object, long index);
 void    listpop(GEN L, long index);
 void    listpop0(GEN L, long index);
@@ -3048,7 +3046,10 @@ GEN     listput(GEN list, GEN object, long index);
 GEN     listput0(GEN list, GEN object, long index);
 void    listsort(GEN list, long flag);
 GEN     matsize(GEN x);
+GEN     mklist(void);
+GEN     mklist_typ(long t);
 GEN     mklistcopy(GEN x);
+GEN     mkmap(void);
 GEN     normalize(GEN x);
 GEN     normalizepol(GEN x);
 GEN     normalizepol_approx(GEN x, long lx);
