@@ -122,6 +122,7 @@ BA 40- [libpari] ZpXQX_roots, ZqX_roots, ZqX_liftfact, ZqX_liftroot,
 BA 18- ZpX_liftfact no longer handles extensions of Qp, use ZqX_liftfact
    19- char_rootof1 renamed to rootsof1_cx, char_rootof1_u -> rootsof1u_cx
    20- gp --test: consider that the session is not interactive
+BA 21- [libpari] rename listcreate to mklist
 
 Done for version 2.8.0 (released 12/08/2016):
 
